--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,8 +13,10 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
 
-        <!-- res/values/themes.xml -->
-        <item name="materialThemeOverlay">@style/Theme.Material3.DayNight.NoActionBar</item>
-
+    </style>
+    <!-- Base application theme. -->
+    <style name="Base.Theme.AdminRestaurante" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your dark theme here. -->
+        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
 </resources>
